<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SignalStrengthPlotter</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="start_tracking_label">Start Collecting Data</string>
    <string name="congratulation_label">Congratulations!</string>
    <string name="you_are_awesome_label">You are awesome.</string>
    <string name="explaination_label">Just toggle &quot;Collect Data&quot; at the beginnning of your day, and then tap &quot;Submit&quot; when you finish your day. This app will start a background service which will poll your cell service strength and your gps location every 5 minutes (you won\'t notice any additional battery drain). </string>
	<string name="privacy_label">The data which you are collecting will not be linked to you in any way, I promise.</string>
	<string name="stop_collecting">Stop Collecting Data</string>
    
</resources>